--- a/levels.html
+++ b/levels.html
@@ -91,7 +91,7 @@
 
         </div>
         <div class="about_img">
-          <img src="images/programming languages 2.jpg">
+          <img src="programming languages 2.jpg">
         </div>
     </section>
 
